chore: update SSM default AMI's

--- a/moto/ec2/resources/latest_amis/ap-northeast-2.json
+++ b/moto/ec2/resources/latest_amis/ap-northeast-2.json
@@ -1,59 +1,11 @@
 [
   {
-    "ami_id": "ami-03d72cd5f6dd842bb",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0eddbd81024d3fbdd",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-06eb68a3c20079122",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-075f89d01ce4e4d00",
+    "ami_id": "ami-09e04c9fcd45f2e3b",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230207.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-arm64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -64,12 +16,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0888cb809eb69f3e4",
+    "ami_id": "ami-0db17858c6612f06b",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230207.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -80,12 +32,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-04e214120c3026b2f",
+    "ami_id": "ami-0329dc7115d8a9075",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -96,12 +48,28 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-02ea2b660f052992d",
+    "ami_id": "ami-0dae886cd4a1d9791",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-05db863031b6c51a1",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -112,12 +80,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-052c44c0d0afc2547",
+    "ami_id": "ami-0f6e451b865011317",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230207.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -128,12 +96,60 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0f0e292bfc9760ddf",
+    "ami_id": "ami-02f39bf99eeca5fa0",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230207.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0bb2c07605e1327b3",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 Minimal HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0953c5ceb31ac7963",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230207.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-041a38033878517ac",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230207.0 arm64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230207.0-arm64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -144,12 +160,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-056674e86f36651b6",
+    "ami_id": "ami-0e6496235b65306a3",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -160,12 +176,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-055c1da604ae90a84",
+    "ami_id": "ami-06c9de4a6260f9bd7",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn-ami-hvm-2018.03.0.20230207.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -176,12 +192,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0a4fe6514352b5c2a",
+    "ami_id": "ami-0933d5a14d8f3c449",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -192,12 +208,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-01257e4ad0ccf063e",
+    "ami_id": "ami-0c8ddce62ef397100",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -208,12 +224,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0dabdd724ec8aec31",
+    "ami_id": "ami-0893ccd2d168621f1",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -224,12 +240,60 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-01433f70bb1219050",
+    "ami_id": "ami-083ec1a00edfbfcb5",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230207.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-arm64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-08d5a59f3643037b9",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 Minimal HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-arm64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0b9cce4f47b75cab3",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230207.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-09cb77f7d71913b8f",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
