--- a/moto/ec2/resources/latest_amis/ap-east-1.json
+++ b/moto/ec2/resources/latest_amis/ap-east-1.json
@@ -1,11 +1,11 @@
 [
   {
-    "ami_id": "ami-0ad1c7600b14318e1",
+    "ami_id": "ami-0086a242f2a177a94",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -16,12 +16,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-03252c7e8cab2f40e",
+    "ami_id": "ami-0b68b82258c5f783d",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -32,12 +32,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0d5fcf3107e4f450a",
+    "ami_id": "ami-0b6af4be6eeb85df9",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230207.0-x86_64-ebs",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -48,12 +48,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0c84c81ed52f27ecb",
+    "ami_id": "ami-0c5d3e1b50d070c13",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-x86_64-ebs",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -64,12 +64,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0fa7fb8f97148725a",
+    "ami_id": "ami-0edad8baf6258b70a",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -80,44 +80,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-015938010c14d2958",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "910595266909",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0f2bb4641e7467ff2",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "910595266909",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0e8f549b3a5834f63",
+    "ami_id": "ami-041194eda32fa6bac",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -128,12 +96,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-01d1711359671a6f4",
+    "ami_id": "ami-0a2b1bb492734d3db",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -144,12 +112,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0ce36c888e08076c2",
+    "ami_id": "ami-06c40dfaf1c717a20",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230207.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-arm64-gp2",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -160,12 +128,108 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-012f9c47c3daa4ed0",
+    "ami_id": "ami-0e679816c1d0be6df",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230207.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-x86_64-gp2",
+    "owner_id": "910595266909",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-030dbdeaeb4ca3d83",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230207.0-x86_64-ebs",
+    "owner_id": "910595266909",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0d4049beb636adc2b",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230207.0-x86_64-ebs",
+    "owner_id": "910595266909",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0794affeb42d6b49b",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230207.0-x86_64-gp2",
+    "owner_id": "910595266909",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0ebcbb292f46c7da5",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-x86_64-gp2",
+    "owner_id": "910595266909",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0275e9ae81fa928e7",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230207.0 x86_64 HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-x86_64-ebs",
+    "owner_id": "910595266909",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-04b92e9ac02a805bb",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230207.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-arm64-gp2",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -176,12 +240,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-01c6bf6a47e0a23c3",
+    "ami_id": "ami-0fc974e4a246fa50c",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-x86_64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -192,12 +256,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-06dfd00f9ac195861",
-    "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
+    "ami_id": "ami-05814735414197b1d",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230207.0 arm64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230207.0-arm64-ebs",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -208,12 +272,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0a2dce9a0bf96fdb3",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "ami_id": "ami-0fff460763c16e207",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
@@ -224,12 +288,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0e40d6716d6ef2aa4",
+    "ami_id": "ami-0beaba8734ae47198",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-x86_64",
     "owner_id": "910595266909",
     "platform": null,
     "public": true,
