--- a/moto/ec2/resources/latest_amis/ap-northeast-3.json
+++ b/moto/ec2/resources/latest_amis/ap-northeast-3.json
@@ -1,11 +1,11 @@
 [
   {
-    "ami_id": "ami-0c2e2b3199ff1626e",
+    "ami_id": "ami-05d6d41b31a15f64b",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 Minimal HVM ebs",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -16,28 +16,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0f4175426007dbc47",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 Minimal HVM kernel-5.15",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-x86_64",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0ad430d4b6366ffc3",
+    "ami_id": "ami-07fab6679a3d35844",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 Minimal HVM ebs",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230207.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-minimal-hvm-2.0.20221103.3-arm64-ebs",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-arm64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -48,12 +32,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0f10048a0131e4f1c",
+    "ami_id": "ami-0cad25854a164e77d",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 Minimal HVM ebs",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-minimal-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-x86_64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -64,12 +48,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0ab00abfb72e04ac0",
+    "ami_id": "ami-0ec60b03df3f5094f",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 Kernel 5.10 AMI 2.0.20230207.0 arm64 HVM gp2",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-arm64-gp2",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -80,12 +64,44 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-02d775dedaee960da",
+    "ami_id": "ami-090ae0a4750988734",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230207.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-x86_64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0356da175438ca859",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 HVM gp2",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-hvm-2018.03.0.20230207.0-x86_64-gp2",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-05f60a0de019c1f90",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 HVM kernel-5.15",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 HVM kernel-5.15",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -96,28 +112,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0e0cbf0f03ba99ee7",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0953a90d5fbf424de",
+    "ami_id": "ami-0387ce86b055450c6",
     "architecture": "arm64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 arm64 Minimal HVM kernel-5.15",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-minimal-2022.0.20221103.1-kernel-5.15-arm64",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-arm64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -128,12 +128,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-080ff2fec9a0a3452",
+    "ami_id": "ami-0760e3c33bb2cd7e7",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM gp2",
+    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20230207.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-gp2",
+    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20230207.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -144,12 +144,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0ac75095cfa26432d",
+    "ami_id": "ami-0d7d93c8486c233cf",
     "architecture": "x86_64",
-    "description": "Amazon Linux AMI 2018.03.0.20221018.0 x86_64 HVM ebs",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn-ami-hvm-2018.03.0.20221018.0-x86_64-ebs",
+    "name": "amzn-ami-hvm-2018.03.0.20230207.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -160,12 +160,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0b85ff3c4b506974d",
+    "ami_id": "ami-0a3eea368a8db5314",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2022 AMI 2022.0.20221103.1 x86_64 HVM kernel-5.15",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 x86_64 Minimal HVM kernel-6.1",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "al2022-ami-2022.0.20221103.1-kernel-5.15-x86_64",
+    "name": "al2023-ami-minimal-2023.0.20230222.1-kernel-6.1-x86_64",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -176,44 +176,12 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0ca7f72edb2808742",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM gp2",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-gp2",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0eb8c88ab7413a2c6",
-    "architecture": "x86_64",
-    "description": "Amazon Linux 2 Kernel 5.10 AMI 2.0.20221103.3 x86_64 HVM ebs",
-    "hypervisor": "xen",
-    "image_type": "machine",
-    "name": "amzn2-ami-kernel-5.10-hvm-2.0.20221103.3-x86_64-ebs",
-    "owner_id": "137112412989",
-    "platform": null,
-    "public": true,
-    "root_device_name": "/dev/xvda",
-    "root_device_type": "ebs",
-    "sriov": "simple",
-    "state": "available",
-    "virtualization_type": "hvm"
-  },
-  {
-    "ami_id": "ami-0533f5639d6be666d",
+    "ami_id": "ami-0bf9b3fd4f6f6276a",
     "architecture": "arm64",
-    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20221103.3 arm64 HVM gp2",
+    "description": "Amazon Linux 2 LTS Arm64 AMI 2.0.20230207.0 arm64 Minimal HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-arm64-gp2",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230207.0-arm64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
@@ -224,12 +192,108 @@
     "virtualization_type": "hvm"
   },
   {
-    "ami_id": "ami-0b6b21b33c8e7353c",
+    "ami_id": "ami-073775a7e15912761",
     "architecture": "x86_64",
-    "description": "Amazon Linux 2 AMI 2.0.20221103.3 x86_64 HVM ebs",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 HVM ebs",
     "hypervisor": "xen",
     "image_type": "machine",
-    "name": "amzn2-ami-hvm-2.0.20221103.3-x86_64-ebs",
+    "name": "amzn2-ami-hvm-2.0.20230207.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0d2ab4f2218ecc3b4",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 Minimal HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-016697c7c6ea2dd28",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 x86_64 HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-2022.0.20230118.3-kernel-5.15-x86_64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-013ab1822f0a3a56e",
+    "architecture": "x86_64",
+    "description": "Amazon Linux AMI 2018.03.0.20230207.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn-ami-minimal-hvm-2018.03.0.20230207.0-x86_64-ebs",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-09dc21fd7e69938d6",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2023 AMI 2023.0.20230222.1 arm64 HVM kernel-6.1",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2023-ami-2023.0.20230222.1-kernel-6.1-arm64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-0b495b918eb9cb788",
+    "architecture": "arm64",
+    "description": "Amazon Linux 2022 AMI 2022.0.20230118.3 arm64 Minimal HVM kernel-5.15",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "al2022-ami-minimal-2022.0.20230118.3-kernel-5.15-arm64",
+    "owner_id": "137112412989",
+    "platform": null,
+    "public": true,
+    "root_device_name": "/dev/xvda",
+    "root_device_type": "ebs",
+    "sriov": "simple",
+    "state": "available",
+    "virtualization_type": "hvm"
+  },
+  {
+    "ami_id": "ami-013c17e43910e283d",
+    "architecture": "x86_64",
+    "description": "Amazon Linux 2 AMI 2.0.20230207.0 x86_64 Minimal HVM ebs",
+    "hypervisor": "xen",
+    "image_type": "machine",
+    "name": "amzn2-ami-minimal-hvm-2.0.20230207.0-x86_64-ebs",
     "owner_id": "137112412989",
     "platform": null,
     "public": true,
